# simple-3tier-webapp-using-spec-kit

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .terraformignore  GEMINI.md  README.md  SECURITY.md
.gemini/commands/: speckit.analyze.toml  speckit.checklist.toml  speckit.clarify.toml  speckit.constitution.toml  speckit.implement.toml  speckit.plan.toml  speckit.specify.toml  speckit.tasks.toml
.github/workflows/: cd.yml  ci.yml  secret-scan.yml
specs/001-aws-3tier-webapp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-aws-3tier-webapp/checklists/: requirements.md
specs/001-aws-3tier-webapp/contracts/: openapi.yml
specs/001-update-readme/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-update-readme/checklists/: requirements.md
specs/002-upgrade-python-version/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-upgrade-python-version/checklists/: requirements.md
specs/003-github-actions-cicd/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-github-actions-cicd/checklists/: requirements.md
src/app/: Dockerfile  main.py  pyproject.toml
src/app/simple_3tier_webapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/app/tests/: test_main.py
terraform/: api_gateway.tf  dynamodb.tf  ecs.tf  iam.tf  main.tf  outputs.tf  variables.tf  versions.tf  vpc.tf
