[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi",
    "uvicorn",
    "boto3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

